# yuppie-backend

./: Dockerfile  Makefile  README.md  architecture-diagram.drawio  docker-compose.yaml  init.sql  pyproject.toml
src/: config.py  database.py  main.py
src/auth/: dependecies.py  routes.py  schemas.py  services.py
src/debt/: models.py  services.py
src/payment/: models.py  routes.py  schemas.py  services.py  utils.py
src/report/: models.py  routes.py  services.py
src/service/: models.py  routes.py  services.py
src/user/: models.py  services.py
