[tool.poetry]
name = "yuppie-backend"
version = "0.1.0"
description = "Diseño y desarrollo un proyecto de ejemplo, un servicio Rest API para atender el siguiente caso de negocio: APLICACIÓN MÓVIL DE PAGO DE SERVICIOS."
authors = ["Agustin Arce <agustinarceprincich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["standard"], version = "^0.112.0"}
authx = "^1.3.0"
itsdangerous = "^2.2.0"
sqlmodel = "^0.0.21"
bcrypt = "^4.2.0"
uuid7 = "^0.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-sugar = "^1.0.0"
black = "^24.8.0"
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
